- Allow 1 sample per lane on barcoding question (seq submissions).
- Don't ask barcoding questions on external experiments.
- Fix for dictionary update problem where an item is saved when other tree items have been expanded above it.
- Updated core ordering page.
- Enabled edit of $ amt on PO billing accounts
- Added "Fill" button to fill in workflow parameters for all samples on an experiment.

5.1.4 (Apr 27, 2011)
--------------------
- Moved FDTFileDaemon to gnomex opensource hciFDT source tree.
- Add other organism to lucene search index.
- Add section to install notes for configuring GNomEx to use FDT
- Fix for retrieving codeApplication when no buttons present in microarrayAppRadioGroup (saveRequest function in ExperimentEditView.mxml).
- Allow save of experiments with no billing accounts.
- Added instructions for command line download/upload to commented section in jnlp files (added fdt_jar_location property in case we need
  to change location for obtaining fdt file -- currently http://monalisa.cern.ch/FDT/).
- Fixed problem with billing period not being set when price dragged to billing sheet. Added code to validate that billing period has been selected.
- Fix bug that was ignoring barcoding radio selection of yes when user submits Illumina GAII seq request.
- Reworked fix for unusual characters in protocol description -- completely escaping the text was causing problems for the Lucene index compile. Replaced
  with a custom function to escape special characters.
- Modified Lucene search to add the ability to search on partial words.
- Combine Number Seq cycles and Seq run type into one set of radio buttons on Seq submissions.


5.1.3 (Apr 19, 2011)
---------------------
- For experiment submission, default the organism and sample prep method dropdown select based on request category
- For sequencing experiment submission, only ask if samples are barcoded if the request category dictionary indicates that sample barcoding is options.